增加注销账号页面 沉浸式布局修改 按照设计图修改UI

--- a/app/src/main/res/layout/content_game_detail_result_bk_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_bk_rv.xml
@@ -81,7 +81,10 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/color_1F1F1F_E2E2E2" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
