--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -788,6 +788,7 @@
                                 android:layout_toStartOf="@+id/iv_line3">
 
                                 <TextView
+                                    android:id="@+id/tv_version_code"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/updatable_version"
