--- a/app/src/main/res/layout/activity_cancel_account.xml
+++ b/app/src/main/res/layout/activity_cancel_account.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:background="@color/color_F0F5FA"
     android:layout_height="match_parent">
-    <include
-        android:id="@+id/tool_bar"
-        layout="@layout/view_base_tool_bar_no_drawer" />
+    <org.cxct.sportlottery.ui.common.CustomTopToolbar
+        android:id="@+id/custom_tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:background="@color/color_202541_FFFFFF"
         android:orientation="horizontal"
