--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -796,9 +796,10 @@
                                     android:textSize="@dimen/textSize12sp" />
 
                                 <ImageView
-                                    android:layout_width="10dp"
-                                    android:layout_height="10dp"
-                                    android:src="@drawable/shape_red_circle" />
+                                    android:id="@+id/iv_version_new"
+                                    android:layout_width="31dp"
+                                    android:layout_height="16dp"
+                                    android:src="@drawable/icon_tag_new" />
                             </LinearLayout>
 
                             <View
@@ -1071,8 +1072,7 @@
                         android:gravity="center"
                         android:minHeight="48dp"
                         android:orientation="horizontal"
-                        android:visibility="gone"
-                        tools:visibility="gone">
+                        >
 
                         <ImageView
                             android:layout_width="wrap_content"
