--- a/app/src/main/res/layout/activity_self_limit.xml
+++ b/app/src/main/res/layout/activity_self_limit.xml
@@ -9,7 +9,10 @@
     tools:context=".ui.feedback.FeedbackMainActivity">
 
     <include layout="@layout/view_base_tool_bar_no_drawer" />
-
+    <View
+        android:background="@color/color_80334266_E3E8EE"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"/>
     <org.cxct.sportlottery.ui.common.CustomTabLayout
         android:id="@+id/custom_tab_layout"
         android:layout_width="match_parent"
