--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -70,7 +70,7 @@
                     android:layout_marginLeft="@dimen/margin_14"
                     android:layout_weight="1"
                     android:text="@string/self_limit_impotent"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textColor="@color/color_FFFFFF_414655"
                     android:textSize="@dimen/textSize13sp" />
 
                 <ImageView
@@ -108,8 +108,8 @@
                 android:layout_marginEnd="@dimen/margin_10"
                 android:minWidth="62dp"
                 android:text="@string/self_limit_froze_days"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize13sp" />
+                android:textColor="@color/color_9BB3D9_535D76"
+                android:textSize="@dimen/textSize14sp" />
 
 
             <EditText
@@ -138,8 +138,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
         android:textColor="@color/color_E44438_e44438"
-        android:textSize="@dimen/textSize12sp"
-        android:visibility="visible" />
+        android:textSize="@dimen/textSize14sp"
+        tools:text="• 以美东 (UTC-4) 时间计算"
+        />
 
     <TextView
         android:id="@+id/tvError"
