--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -797,6 +797,7 @@
 
                                 <ImageView
                                     android:id="@+id/iv_version_new"
+                                    android:visibility="gone"
                                     android:layout_width="31dp"
                                     android:layout_height="16dp"
                                     android:src="@drawable/icon_tag_new" />
