--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -12,16 +12,29 @@
         android:fitsSystemWindows="false"
         android:orientation="vertical"
         tools:background="@drawable/bg01_sidebar">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_24"
+                android:layout_marginTop="80dp"
+                android:layout_marginBottom="@dimen/margin_50"
+                android:text="@string/setting"
+                android:textColor="@color/color_FFF3E1"
+                android:textSize="24dp" />
+            <TextView
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:drawableEnd="@drawable/ic_back"
+                android:textColor="@color/color_FFF3E1"
+                android:textSize="24dp" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_24"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="@dimen/margin_50"
-            android:text="@string/setting"
-            android:textColor="@color/color_FFF3E1"
-            android:textSize="24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
