--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -62,27 +62,23 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:clipChildren="false"
-            app:layout_constraintEnd_toStartOf="@id/tv_customer_service"
+            app:layout_constraintEnd_toStartOf="@id/iv_customer_service"
             app:layout_constraintStart_toEndOf="@id/iv_broadcast_icon"
             app:speed_dp_sec="60dp"
             tools:itemCount="1"
             tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/content_marquee" />
 
-        <TextView
-            android:id="@+id/tv_customer_service"
+
+        <ImageView
+            android:id="@+id/iv_customer_service"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_customer_service"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/bg_blue_radius_10"
-            android:paddingHorizontal="7dp"
-            android:drawablePadding="3dp"
-            android:drawableLeft="@drawable/icon_customer_service"
-            android:textSize="12sp"
-            android:textColor="@color/color_025BE8"
-            android:text="@string/customer_service_title" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -136,7 +132,7 @@
                 android:background="@drawable/selector_bg_home_tab_menu"
                 android:textColor="@color/selector_blue_white"
                 android:textSize="@dimen/textSize14sp"
-                android:text="@string/e_game" />
+                android:text="@string/slot" />
         </RadioGroup>
     </FrameLayout>
 
