--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -8,16 +8,16 @@
     android:background="@color/color_F0F5FA"
     android:overScrollMode="never"
     android:scrollbars="none">
-    <View
-        android:id="@+id/v_statusbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_25"
-        android:background="@color/color_FFFFFF" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+        <View
+            android:id="@+id/v_statusbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_25"
+            android:background="@color/color_FFFFFF" />
         <FrameLayout
             android:id="@+id/lin_person"
             android:layout_width="match_parent"
@@ -507,7 +507,6 @@
                                 android:background="@color/color_E3E8EE" />
                         </RelativeLayout>
                     </LinearLayout>
-
                     <LinearLayout
                         android:id="@+id/btn_other_bet_record"
                         android:layout_width="match_parent"
@@ -515,33 +514,48 @@
                         android:background="@null"
                         android:gravity="center"
                         android:minHeight="48dp"
-                        android:orientation="horizontal"
-                        >
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
+                            android:layout_marginStart="12dp"
                             android:layout_marginEnd="20dp"
                             android:contentDescription="@null"
                             android:src="@drawable/icon_other_betting" />
 
-                        <TextView
+                        <RelativeLayout
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/other_bet"
-                            android:textColor="@color/color_6C7BA8"
-                            android:textSize="@dimen/textSize14sp" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_marginEnd="10dp"
-                            android:contentDescription="@null"
-                            android:src="@drawable/ic_arrow_right" />
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:text="@string/other_bet"
+                                android:textColor="@color/color_6C7BA8"
+                                android:textSize="@dimen/textSize14sp" />
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:contentDescription="@null"
+                                android:src="@drawable/ic_arrow_right" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/margin_1"
+                                android:layout_alignParentBottom="true"
+                                android:background="@color/color_E3E8EE" />
+                        </RelativeLayout>
 
                     </LinearLayout>
+
 
                     <LinearLayout
                         android:id="@+id/btn_game_settlement"
