--- a/app/src/main/res/layout/view_status_spinner.xml
+++ b/app/src/main/res/layout/view_status_spinner.xml
@@ -5,12 +5,14 @@
     android:id="@+id/cl_root"
     android:layout_width="match_parent"
     android:layout_height="44dp"
+
     tools:context=".ui.component.StatusSelectorView"
     tools:background="@drawable/frame_color_silver_light_stroke">
 
     <TextView
+
         android:id="@+id/tv_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:ellipsize="end"
         android:gravity="center"
@@ -18,19 +20,17 @@
         android:textColor="@color/color_AEAEAE_404040"
         android:textSize="@dimen/textSize14sp"
         android:paddingHorizontal="14dp"
-        app:layout_constraintEnd_toStartOf="@id/iv_arrow"
+       app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="@string/all_order_status" />
 
     <ImageView
         android:id="@+id/iv_arrow"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginHorizontal="10dp"
         android:src="@drawable/ic_arrow_gray"
         app:layout_constraintBottom_toBottomOf="@id/tv_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/tv_name"
         app:layout_constraintTop_toTopOf="@id/tv_name" />
 
