BUG OK-456 已解决 BUG OK-458 已解决 BUG OK-459 已解决 BUG　OK-455已解决

--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -29,6 +29,7 @@
             android:layout_weight="1"
             android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/text_account_history_bet"
+            app:listBackground="@drawable/bg_pop_up_arrow"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
 
     </LinearLayout>
