--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="200dp"
-    android:paddingRight="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout_width="wrap_content"
+    tools:layout_height="200dp"
+    android:layout_marginRight="10dp"
     tools:ignore="ContentDescription, SpUsage">
 
     <ImageView
@@ -60,7 +62,7 @@
             android:textColor="@color/color_6C7BA8"
             android:fontFamily="@font/helvetica_bold"
             android:textSize="14sp"
-            android:text="场赛事" />
+            android:text="@string/sport_match" />
 
 
     </LinearLayout>
