--- a/app/src/main/res/layout/itemview_sport_type_v6.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v6.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="60dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingVertical="@dimen/margin_10"
+    android:minWidth="60dp"
+    android:paddingVertical="@dimen/margin_5"
     android:background="@color/color_141414_FCFCFC"
     tools:context=".ui.game.home.HomeGameCard"
     tools:ignore="SpUsage">
@@ -40,7 +41,7 @@
         android:maxLines="1"
         android:textColor="@color/color_select_blue_black"
         android:textSize="@dimen/textSize12sp"
-        android:fontFamily="@font/helvetica"
+        android:fontFamily="@font/din_font"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sport_type_text"
