--- a/app/src/main/res/drawable/bg_radius_4_button_blue.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_blue.xml
@@ -2,6 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="#F0F8FF" />
-    <stroke android:color="#1B73FF" android:width="1dp" />
+    <solid android:color="@color/color_025BE8" />
 </shape>
