--- a/app/src/main/res/drawable/selector_skin_switch.xml
+++ b/app/src/main/res/drawable/selector_skin_switch.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/icon_02close" android:state_checked="true" />
-    <item android:drawable="@drawable/icon_01open" android:state_pressed="false" />
-    <item android:drawable="@drawable/icon_01open" />
+    <item android:drawable="@drawable/ic_switch_night" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_switch_day" android:state_pressed="false" />
+    <item android:drawable="@drawable/ic_switch_day" />
 </selector>
