--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -62,7 +62,7 @@
             android:background="@color/color_191919_FCFCFC"
             android:orientation="vertical"
             android:visibility="visible"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="投注"
+                    android:text="@string/betting"
                     android:textColor="@color/main_tab_text_selector"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -113,7 +113,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="赛事分析"
+                    android:text="@string/match_analyze"
                     android:textColor="@color/color_6C7BA8"
                     android:textSize="14sp"
                     android:textStyle="bold"
