--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg01_sidebar">
+    android:background="@drawable/bg_home_menu_left">
 
     <LinearLayout
         android:layout_width="match_parent"
