--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -60,35 +60,45 @@
                 android:layout_weight="1" />
 
 
-            <LinearLayout
-                android:id="@+id/lin_menu"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_bet_all_sports"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
+                android:background="@drawable/selector_bg_home_tab_menu"
                 android:minWidth="100dp"
-                android:duplicateParentState="true"
-                android:background="@drawable/selector_bg_home_tab_menu">
+                tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
 
-                <TextView
-                    android:id="@+id/tv_all_sports"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="13dp"
-                    android:textSize="14sp"
                     android:duplicateParentState="true"
-                    android:text="@string/all_sport"
-                    android:textColor="@color/selector_blue_white" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/iv_all_sports_arrow"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginEnd="6dp"
-                    android:duplicateParentState="true"
-                    android:src="@drawable/selector_blue_white_arrow" />
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_all_sports"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="13dp"
+                        android:duplicateParentState="true"
+                        android:text="@string/all_sport"
+                        android:textColor="@color/selector_blue_white" />
+
+                    <ImageView
+                        android:id="@+id/iv_all_sports_arrow"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginEnd="6dp"
+                        android:duplicateParentState="true"
+                        android:src="@drawable/selector_blue_white_arrow" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
         <org.cxct.sportlottery.widget.RadiusCardView
