--- a/app/src/main/res/layout/fragment_main_left.xml
+++ b/app/src/main/res/layout/fragment_main_left.xml
@@ -8,14 +8,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/transparent"
         android:fitsSystemWindows="false"
         android:orientation="vertical"
-        tools:background="@drawable/bg01_sidebar">
+        tools:background="@drawable/bg_home_menu_left">
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
                 android:textColor="@color/color_FFF3E1"
                 android:textSize="24dp" />
             <TextView
+                android:id="@+id/iv_menu_back"
                 android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,8 +91,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow_gray_right" />
                 </LinearLayout>
 
                 <View
@@ -131,8 +133,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/selector_arrow_right_up" />
                 </LinearLayout>
 
                 <View
@@ -186,8 +188,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/selector_arrow_right_up" />
                 </LinearLayout>
 
                 <View
@@ -248,8 +250,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/selector_arrow_right_up" />
                 </LinearLayout>
 
                 <View
@@ -346,8 +348,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow_gray_right" />
                 </LinearLayout>
 
                 <View
@@ -388,8 +390,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow_gray_right" />
                 </LinearLayout>
 
                 <View
@@ -430,8 +432,8 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_arrow_01" />
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow_gray_right" />
                 </LinearLayout>
 
                 <View
