--- a/app/src/main/res/layout/item_home_recommend.xml
+++ b/app/src/main/res/layout/item_home_recommend.xml
@@ -284,10 +284,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/teamInfoBlock">
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                     android:id="@+id/oddBtn1"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="32dp"
                     android:layout_marginHorizontal="@dimen/margin_10"
                     android:layout_weight="3" />
 
@@ -318,10 +318,10 @@
                 </LinearLayout>
 
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                     android:id="@+id/oddBtn2"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="32dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="3" />
 
