--- a/app/src/main/res/layout/publicity_new_recommend_item.xml
+++ b/app/src/main/res/layout/publicity_new_recommend_item.xml
@@ -294,7 +294,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/teamInfoBlock">
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                     android:id="@+id/oddBtn1"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
@@ -302,7 +302,7 @@
                     android:layout_marginEnd="7dp"
                     android:layout_weight="1" />
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonHome
                     android:id="@+id/oddBtn2"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
