--- a/app/src/main/res/layout/publicity_recommend_item.xml
+++ b/app/src/main/res/layout/publicity_recommend_item.xml
@@ -235,14 +235,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/teamInfoBlock">
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="7dp"
                     android:layout_weight="1" />
 
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
+                <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="8dp"
