--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -58,4 +58,6 @@
     <string name="language_cn">简体中文</string>
     <string name="language_en">English</string>
     <string name="language_vi">Tiếng Việt</string>
+    <string name="language_th">ภาษาไทย</string>
+    <string name="language_id">Indonesia</string>
 </resources>
