--- a/app/src/main/res/layout/item_bet_list_tab.xml
+++ b/app/src/main/res/layout/item_bet_list_tab.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:textColor="@color/selector_bet_tab_text"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="normal"
