[Fix] OK-724【OKBET-UI-Android-Bet Slip】Bet Slip Cart Translation(翻译)

--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -272,7 +272,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:maxWidth="60dp"
-                        android:text="@string/bet_info_list_bet"
+                        android:text="@string/bet_stake"
                         android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintBottom_toBottomOf="@+id/et_bet"
