--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -18,7 +18,7 @@
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@color/color_232C4F_F3F9FF"
         app:defaultStatusText="@string/all_plat_type"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar" />
 
@@ -37,11 +37,13 @@
         android:visibility="visible" />
 
     <LinearLayout
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
-        android:background="@color/color_262626_edf4ff"
+        android:background="@color/color_232C4F_F4F4F4"
         android:orientation="horizontal"
         android:paddingVertical="4dp"
         app:layout_constraintTop_toBottomOf="@id/tvUsTime">
@@ -103,7 +105,7 @@
             android:layout_height="match_parent"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_other_bet_record" />
+            />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
