--- a/app/src/main/res/layout/fragment_other_bet_record_detail.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record_detail.xml
@@ -6,16 +6,44 @@
     android:layout_height="match_parent"
     android:background="@color/color_141414_F3F4F5"
     tools:context=".ui.profileCenter.otherBetRecord.detail.OtherBetRecordDetailFragment">
-
+    <View
+        android:id="@+id/view_top"
+        android:background="@color/color_E3E8EE"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
+    <TextView
+        android:id="@+id/tvUsTime"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:background="@color/color_FFFFFF"
+        android:text="@string/text_us_east_time"
+        android:textColor="@color/color_E23434"
+        android:textSize="@dimen/textSize12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+         android:gravity="end|center_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/view_top"
+        android:paddingEnd="@dimen/margin_20"
+        android:visibility="visible" />
     <LinearLayout
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_262626_edf4ff"
+        android:background="@color/color_232C4F_F4F4F4"
         android:orientation="horizontal"
         android:paddingVertical="4dp"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toBottomOf="@+id/tvUsTime">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.25"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="@string/date"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize12sp"  />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
