--- a/app/src/main/res/layout/item_other_bet_record.xml
+++ b/app/src/main/res/layout/item_other_bet_record.xml
@@ -14,11 +14,13 @@
     </data>
 
     <LinearLayout
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginVertical="0.5dp"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@color/color_202541_FFFFFF"
         android:onClick="@{() -> clickListener.onClick(data)}">
 
         <LinearLayout
