1.转换记录缺省图修改 2.修改赛过结算菜单数据

--- a/app/src/main/res/layout/content_feedback_record_list_rv.xml
+++ b/app/src/main/res/layout/content_feedback_record_list_rv.xml
@@ -11,9 +11,12 @@
     tools:context=".ui.feedback.record.FeedbackListAdapter">
 
     <LinearLayout
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:background="@color/color_FFFFFF"
         android:orientation="horizontal">
 
         <TextView
