--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -13,15 +13,15 @@
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_5"
         app:layout_constraintTop_toTopOf="parent"
+
         app:minusDays="8" />
 
     <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@color/color_232C4F_F3F9FF"
         app:defaultStatusText="@string/all_status"
         app:layout_constraintTop_toBottomOf="@id/date_range_selector"/>
 
@@ -29,7 +29,9 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_262626_edf4ff"
+        android:layout_marginLeft="@dimen/margin_20"
+        android:layout_marginRight="@dimen/margin_20"
+        android:background="@color/color_232C4F_F4F4F4"
         android:gravity="center"
         android:minHeight="30dp"
         android:orientation="horizontal"
