--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -462,5 +462,6 @@
     <color name="color_232C4F_F3F9FF">@color/color_F3F9FF</color>
     <color name="color_232C4F_F4F4F4">@color/color_F4F4F4</color>
     <color name="color_FFFFFF_535D76">@color/color_535D76</color>
+    <!--意见与反馈-反馈记录-->
 
 </resources>
