--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -80,7 +80,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="@string/betting"
+                    android:text="@string/bet_info_list_bet"
                     android:textColor="@color/main_tab_text_selector"
                     android:textSize="14sp"
                     android:textStyle="bold"
