--- a/app/src/main/res/layout/activity_register_ok.xml
+++ b/app/src/main/res/layout/activity_register_ok.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/register_title"
+                android:text="@string/btn_register"
                 android:textSize="24dp"
                 android:textStyle="bold"
                 app:gt_color_list="@array/register_title_color"
