--- a/app/src/main/res/layout/item_home_recommend.xml
+++ b/app/src/main/res/layout/item_home_recommend.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:paddingVertical="10dp"
+    android:paddingRight="@dimen/margin_10"
     tools:ignore="SpUsage, ContentDescription">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvBlock"
         android:layout_width="320dp"
         android:layout_height="140dp"
-        android:layout_marginVertical="@dimen/margin_10"
         app:cardBackgroundColor="@color/color_202020_FCFCFC"
-        app:cardCornerRadius="@dimen/margin_6"
-        app:cardElevation="@dimen/margin_3"
+        app:cardCornerRadius="@dimen/margin_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,8 +74,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="4dp"
-                        android:textColor="@color/color_999999_999999"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_FFFFFF_414655"
+                        android:textSize="@dimen/textSize10sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="2ND" />
@@ -87,8 +87,8 @@
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="6dp"
                         android:layout_marginEnd="4dp"
-                        android:textColor="@color/color_999999_999999"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_FFFFFF_414655"
+                        android:textSize="@dimen/textSize10sp"
                         app:layout_constraintStart_toEndOf="@id/tvGameStatus"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="09:15"
@@ -100,8 +100,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="6dp"
-                        android:textColor="@color/color_999999_999999"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_FFFFFF_414655"
+                        android:textSize="@dimen/textSize10sp"
                         app:layout_constraintStart_toEndOf="@id/tv_game_play_time"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="/5" />
@@ -154,7 +154,7 @@
                         android:ellipsize="end"
                         android:gravity="center"
                         android:maxLines="1"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="Atleticon Nacional" />
                 </LinearLayout>
@@ -234,7 +234,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="6dp"
-                        android:textColor="@color/color_999999_999999"
+                        android:textColor="@color/color_6C7BA8_A7B2C4"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -267,7 +267,7 @@
                         android:ellipsize="end"
                         android:gravity="center"
                         android:maxLines="1"
-                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="Junior Barranquilla" />
                 </LinearLayout>
@@ -301,7 +301,7 @@
                         android:id="@+id/tvPlayCateCount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bg_publicity_recommend_count"
+                        android:background="@drawable/bg_blue_radius_2"
                         android:drawablePadding="1dp"
                         android:gravity="center"
                         android:minWidth="25dp"
@@ -310,7 +310,7 @@
                         android:paddingEnd="2dp"
                         android:textColor="@color/color_FFFFFF_FFFFFF"
                         android:textSize="@dimen/textSize10sp"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/din_font"
                         app:drawableEndCompat="@drawable/ic_arrow_right_white"
                         tools:layout_editor_absoluteX="43dp"
                         tools:layout_editor_absoluteY="5dp"
